Adds java doc documentation